# webapp-debug-skill

./: .gitignore  AGENTS.md  CHANGELOG.md  DECISIONS.md  INSTALL.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN.md  MASTER_IMPLEMENTATION_PLAN.md  ORCHESTRATION_RUNBOOK.md  PHASE_ACCEPTANCE_CRITERIA.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.2.0.md
scripts/: apply_inventory_sync.py  apply_scenario_sync.py  bootstrap_playwright_project.py  discover_cakephp_inventory.py  evaluate_coverage.py  export_sheets_snapshot.py  generate_playwright_tests.py  init_sheets.py  plan_inventory_sync.py  plan_scenario_sync.py  redact_artifact.py  release_check.py  run_playwright_tests.py  validate_config.py  validate_sheets_schema.py  validate_skill.py
skills/webapp-debug/: SKILL.md
src/webapp_debug_skill/: __init__.py  cakephp_discovery.py  cli.py  config.py  config_writer.py  coverage.py  discovery_cli.py  errors.py  google_credentials.py  google_sheets_backend.py  inventory_apply_cli.py  inventory_identity.py  inventory_model.py  inventory_sync.py  locator_model.py  php_static.py  playwright_generator.py  playwright_project.py  playwright_runner.py  redaction.py  risk.py  scenario_apply_cli.py  scenario_model.py  scenario_sync.py  sheets_bootstrap.py  sheets_client.py  sheets_init.py  sheets_init_cli.py  sheets_lock.py  sheets_schema.py  sheets_snapshot.py  sheets_snapshot_cli.py  status_model.py  wal.py
tests/fakes/: __init__.py  google_sheets_service.py  sheets_backend.py
tests/integration/: README.md  test_google_sheets_integration.py
tests/unit/: sheets_init_helpers.py  test_apply_inventory_sync_cli.py  test_apply_scenario_sync_cli.py  test_cakephp_discovery.py  test_ci_documentation.py  test_config_validation.py  test_config_writer.py  test_coverage.py  test_discovery_cli.py  test_google_credentials.py  test_google_integration_opt_in.py  test_google_sheets_backend.py  test_init_sheets_cli.py  test_inventory_identity.py  test_inventory_model.py  test_inventory_sync.py  (+23 more)
webapp-debug-skill-v0.1/: README.md
(+54 files in other folders)
