[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "webapp-debug-skill"
version = "0.2.0"
description = "Runtime hardening helpers for the webapp-debug agent skill."
requires-python = ">=3.11"
dependencies = [
  "google-api-python-client>=2.150",
  "google-auth>=2.35",
  "google-auth-httplib2>=0.2",
  "jsonschema>=4.23",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: opt-in tests that may call the real Google Sheets API",
]

[tool.ruff]
line-length = 100
target-version = "py311"
